Fixed MyWork section mobile responisiveness

--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -152,7 +152,7 @@
 
     .mywork-container img{
         width: 100%;
-        height: 100%;
+        height: auto;
     }
 
     .mywork-showmore{
@@ -160,5 +160,37 @@
         font-size: 18px;
         margin: 50px auto;
         cursor: pointer;
+    }
+}
+
+@media(max-width: 480px){
+    .mywork{
+        gap: 30px;
+        margin: 30px 20px;
+    }
+
+    .mywork-title h1{
+        padding: 0;
+        font-size: 50px;
+        font-weight: 600;
+    }
+
+    .mywork-title img{
+        width: 100px;
+        margin-right: 50px;
+    }
+
+    .mywork-container{
+        gap: 20px;
+    }
+
+    .work-item img{
+        width: 100%;
+        height: auto;
+    }
+
+    .mywork-showmore{
+        padding: 15px 30px;
+        font-size: 16px;
     }
 }
